# codezip

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/codezip/: __init__.py  fileutils.py  gitutils.py  ignoreparser.py
tests/: .codezipignore  test_codezip.py
tests/example/: .codezipignore
