[tool.poetry]
name = "codezip"
version = "0.1.0"
description = ""
authors = ["Ashley Trinh <itsashley@hey.com>"]
readme = "README.md"
packages = [{include = "codezip", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
