[tool.poetry]
name = "codezip"
version = "0.1.1"
description = ""
authors = ["Ashley Trinh <itsashley@hey.com>"]
readme = "README.md"
packages = [{ include = "codezip", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<4"
igittigitt = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "*"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
